--- a/style.css
+++ b/style.css
@@ -62,11 +62,13 @@ nav ul li{
     overflow: hidden;
 }
 .bottom{
-    position:sticky;
+    position:fixed;
     height:85px;
     background-color: black;
     color: aliceblue;
     bottom:0; 
+    left:0;
+    width:100%;
     display:flex; 
     justify-content: center;
     align-items: center;
