--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@ body{
     /* background-color: rgb(142, 197, 206);
     background-image: linear-gradient(180deg,rgb(232, 161, 243),rgb(201, 137, 215),rgb(117, 186, 225),rgb(13, 9, 235)); */
     overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
 }
 #helo{
     position: fixed;
@@ -19,6 +25,12 @@ body{
 }
 nav{
     font-family: 'Ubuntu',sans-serif;
+    position: fixed;
+    top:0;
+    left:0;
+    right: 0;
+    z-index: 1;
+    width: 100%;
 
 }
 nav ul{
